# Hands-On-Design-Patterns-with-CPP

./: README.md
Chapter01 - An Introduction to Inheritance and Polymorphism/: CMakeLists.txt
Chapter01-An-Introduction-to-Inheritance-and-Polymorphism/: emptyClasses.cpp  polyTest.cpp
Chapter02 - Class and Funcion Templates/: CMakeLists.txt  lambdas.cpp  variableTemplates.cpp
Chapter02-Class-and-Funcion-Templates/: classTemplates.cpp  funcTemplates.cpp  lambdas.cpp  variableTemplates.cpp  variadicTemplates.cpp
Chapter04-Swap-and-the-standard-template-library/: CMakeLists.txt  list_swap.cpp  member_swap.cpp  nonmember_swap_friend.cpp  nonmember_swap_friend_forward.cpp  nonmember_swap_func.cpp  nonmember_swap_none.cpp  nonmember_swap_std.cpp  nonmember_swap_std_only.cpp  std_swap_copyable.cpp  std_swap_movable.cpp  std_swap_noncopyable.cpp  std_swap_nonmovable.cpp  swap_rollback.cpp  vector_empty.cpp  vector_swap.cpp
Chapter05-A-Comprehensive-Look-at-RAII/: CMakeLists.txt  memory1.cpp  mutex1.cpp  scoped_ptr1.cpp  scoped_ptr1_bm.cpp
Chapter06 - Understanding Type Erasure/: CMakeLists.txt
Chapter06-Understanding-Type-Erasure/: CMakeLists.txt  smartptr.cpp  smartptr_extra.cpp
Chapter07-SFINAE-and-Overload-Resolution-Management/: CMakeLists.txt  fast_sort1.cpp  fast_sort2.cpp  fast_sort3.cpp  fast_sort4.cpp  incomplete_class.cpp  incomplete_ctor.cpp  incomplete_template1.cpp  incomplete_template2.cpp  incomplete_template_ctor.cpp  is_class1.cpp  is_class2.cpp  is_class3.cpp  is_valid1.cpp  is_valid1a.cpp  is_valid2.cpp  is_valid2a.cpp  is_valid3.cpp  is_valid4.cpp  multiply1.cpp  multiply2.cpp  multiply3.cpp  multiply4.cpp  multiply5.cpp  no_sfinae1.cpp  overload1.cpp  overload1a.cpp  overload1b.cpp  overload2.cpp  overload3.cpp  overload4.cpp  overload5.cpp  overload6.cpp  sfinae1.cpp  sfinae1a.cpp  sfinae2.cpp  sfinae3.cpp  sfinae4.cpp
Chapter08 - The Curiously Recurring Template Pattern/: CMakeLists.txt
Chapter08-The-Curiously-Recurring-Template-Pattern/: CMakeLists.txt  function_call.cpp  not_equal.cpp  not_equal_friend.cpp  registry.cpp  visitor.cpp
Chapter09-Named-Arguments-and-Method-Chaining/: CMakeLists.txt  city.cpp  cout_chaining.cpp  named_args.cpp  named_args1.cpp  named_args1_extra.cpp  named_args_extra.cpp  poly_chain1.cpp  poly_chain2.cpp  poly_chain2a.cpp  poly_chain3.cpp
Chapter10- Local Buffer Optimization/: CMakeLists.txt
Chapter10-Local-Buffer-Optimization/: CMakeLists.txt  malloc1.cpp  malloc2.cpp  malloc3.cpp  smartptr.cpp  string1.cpp  string2.cpp  vector1.cpp  vector2.cpp
Chapter11-ScopeGuard/: 01_bad.cpp  02_trycatch.cpp  02a_trycatch_cleanup.cpp  02b_trycatch_raiicleanup.cpp  03_raii.cpp  03a_raii_cleanup_and_finalize.cpp  04_scopeguard_basic.cpp  04a_scopeguard_basic_typedef.cpp  05_scopeguard_basic_move.cpp  05a_scopeguard_basic_move_cpp14.cpp  06_scopeguard_obj.cpp  07_scopeguard_lambda.cpp  07a_scopeguard_lambda_cleanup.cpp  08_scopeguard_exception.cpp  09_scopeguard_shielded.cpp  10_scopeguard_lambda_cpp17.cpp  11_scopeguard_on_exit.cpp  11a_scopeguard_on_exit_named.cpp  12_scopeguard_on_fail_cpp17.cpp  12a_scopeguard_on_fail.cpp  12b_scopeguard_on_fail_gcc.cpp  13_scopeguard_te.cpp  13a_scopeguard_te_benchmark.cpp  CMakeLists.txt
Chapter12-Friend-Factory/: CMakeLists.txt  equal_friend_factory_crtp.cpp  friend_factory.cpp  friend_nontemplate.cpp  friend_template.cpp  plus_friend.cpp  plus_friend1.cpp  plus_friend1_template.cpp  plus_friend_factory.cpp  plus_friend_factory_crtp.cpp  plus_friend_factory_ns.cpp  plus_friend_template.cpp  plus_member.cpp
Chapter13-Virtual-Constructors-and-Factories/: CMakeLists.txt  ctor_dtor_dynamic_type.cpp  ctor_dtor_static_type.cpp  ctor_dtor_virtual_type.cpp  poly_copy.cpp  poly_copy_unique.cpp  poly_copy_unique_crtp.cpp  poly_copy_unique_crtp1.cpp  poly_copy_unique_crtp2.cpp  type_registry.cpp  type_registry_unique.cpp  unit_factory.cpp
Chapter15 - Singleton - A Classic OOP Pattern/: CMakeLists.txt
Chapter15-Singleton-A-Classic-OOP-Pattern/: CMakeLists.txt  singleton_eager.cpp  singleton_lazy_leaky.cpp  singleton_meyers.cpp  singleton_meyers_pimpl.cpp  singleton_meyers_pimpl1.cpp  singleton_noaccess.cpp  singleton_static.cpp  singleton_static1.cpp
Chapter16-Policy-Based-Design/: 01_scoped_ptr.cpp  02_scoped_ptr.cpp  02a_scoped_ptr_bug.cpp  02b_scoped_ptr.cpp  02c_scoped_ptr.cpp  02d_scoped_ptr.cpp  02e_scoped_ptr.cpp  02f_scoped_ptr.cpp  02g_scoped_ptr.cpp  03_scoped_ptr.cpp  03a_scoped_ptr.cpp  03b_scoped_ptr.cpp  04_scoped_movable_ptr.cpp  04a_scoped_movable_ptr.cpp  05_shared_ptr.cpp  05a_shared_ptr_test.cpp  05b_shared_ptr_test.cpp  06_shared_ptr_debug.cpp  07_shared_ptr_debug.cpp  07a_shared_ptr_debug.cpp  08_scoped_ptr_enable_if.cpp  08a_scoped_ptr_enable_if.cpp  08b_scoped_ptr_enable_if.cpp  08c_scoped_ptr_enable_if.cpp  09_shared_ptr.cpp  09a_shared_ptr.cpp  10_shared_ptr_rebind.cpp  11_pack.cpp  CMakeLists.txt
Chapter17 - Adapters and Decorators/: CMakeLists.txt
Chapter17-Adapters-and-Decorators/: 01_decorator.cpp  01a_decorator.cpp  02_decorator.cpp  02a_decorator.cpp  03_decorator.cpp  03a_decorator.cpp  04_decorator.cpp  04a_decorator.cpp  04b_decorator.cpp  04c_decorator.cpp  04d_decorator.cpp  05_locking_queue.cpp  05a_locking_queue.cpp  06_adapter_curry.cpp  06a_adapter_curry.cpp  06b_adapter_lambda.cpp  06c_adapter_bind.cpp  06c_adapter_lambda.cpp  06d_adapter_bind.cpp  07_template_template_adapter.cpp  07a_template_template_adapter.cpp  07b_template_template_adapter.cpp  07c_template_template_adapter.cpp  08_time_adapter.cpp  (+2 more)
Chapter18-The-Visitor-Pattern-and-Multiple-Dispatch/: 01_visitor.cpp  01a_visitor.cpp  01b_visitor.cpp  02_visitor_args.cpp  02a_visitor_retval.cpp  03_container_visitor.cpp  03a_composite_visitor.cpp  03b_serialization_visitor.cpp  03c_serialization_visitor.cpp  04_visitor_template.cpp  04a_visitor_template.cpp  04b_visitor_template.cpp  04c_visitor_template.cpp  05_acyclic_visitor.cpp  05a_acyclic_visitor.cpp  05b_acyclic_visitor.cpp  06_static_visitor.cpp  07_serialize_visitor.cpp  07a_serialize_visitor.cpp  CMakeLists.txt
