cmake_minimum_required(VERSION 3.12)
project(Chapter04)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(list_swap list_swap.cpp)
add_executable(member_swap member_swap.cpp)
add_executable(nonmember_swap_friend nonmember_swap_friend.cpp)
add_executable(nonmember_swap_friend_forward nonmember_swap_friend_forward.cpp)
add_executable(nonmember_swap_func nonmember_swap_func.cpp)
add_executable(nonmember_swap_none nonmember_swap_none.cpp)
add_executable(nonmember_swap_std nonmember_swap_std.cpp)
add_executable(nonmember_swap_std_only nonmember_swap_std_only.cpp)
add_executable(std_swap_copyable std_swap_copyable.cpp)
add_executable(std_swap_movable std_swap_movable.cpp)
add_executable(std_swap_noncopyable std_swap_noncopyable.cpp)
add_executable(std_swap_nonmovable std_swap_nonmovable.cpp)
add_executable(swap_rollback swap_rollback.cpp)
add_executable(vector_empty vector_empty.cpp)
add_executable(vector_swap vector_swap.cpp)
