cmake_minimum_required(VERSION 3.12)
project(Chapter07)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(fast_sort1 fast_sort1.cpp)
add_executable(fast_sort2 fast_sort2.cpp)
add_executable(fast_sort3 fast_sort3.cpp)
add_executable(fast_sort4 fast_sort4.cpp)
# add_executable(incomplete_class incomplete_class.cpp)
# add_executable(incomplete_ctor incomplete_ctor.cpp)
add_executable(incomplete_template1 incomplete_template1.cpp)
add_executable(incomplete_template2 incomplete_template2.cpp)
add_executable(incomplete_template_ctor incomplete_template_ctor.cpp)
add_executable(is_class1 is_class1.cpp)
add_executable(is_class2 is_class2.cpp)
add_executable(is_class3 is_class3.cpp)
add_executable(is_valid1a is_valid1a.cpp)
add_executable(is_valid1 is_valid1.cpp)
add_executable(is_valid2a is_valid2a.cpp)
add_executable(is_valid2 is_valid2.cpp)
add_executable(is_valid3 is_valid3.cpp)
add_executable(is_valid4 is_valid4.cpp)
add_executable(multiply1 multiply1.cpp)
add_executable(multiply2 multiply2.cpp)
add_executable(multiply3 multiply3.cpp)
add_executable(multiply4 multiply4.cpp)
add_executable(multiply5 multiply5.cpp)
add_executable(no_sfinae1 no_sfinae1.cpp)
add_executable(overload1a overload1a.cpp)
add_executable(overload1b overload1b.cpp)
add_executable(overload1 overload1.cpp)
add_executable(overload2 overload2.cpp)
add_executable(overload3 overload3.cpp)
add_executable(overload4 overload4.cpp)
add_executable(overload5 overload5.cpp)
add_executable(overload6 overload6.cpp)
add_executable(sfinae1a sfinae1a.cpp)
add_executable(sfinae1 sfinae1.cpp)
add_executable(sfinae2 sfinae2.cpp)
add_executable(sfinae3 sfinae3.cpp)
add_executable(sfinae4 sfinae4.cpp)
