cmake_minimum_required(VERSION 3.12)
project(Chapter10)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_package(benchmark)

add_executable(malloc1 malloc1.cpp)
target_link_libraries(malloc1 benchmark::benchmark)
add_executable(malloc2 malloc2.cpp)
target_link_libraries(malloc2 benchmark::benchmark)
add_executable(malloc3 malloc3.cpp)
target_link_libraries(malloc3 benchmark::benchmark)
add_executable(smartptr smartptr.cpp)
target_link_libraries(smartptr benchmark::benchmark)
add_executable(string1 string1.cpp)
target_link_libraries(string1 benchmark::benchmark)
add_executable(string2 string2.cpp)
target_link_libraries(string2 benchmark::benchmark)
add_executable(vector1 vector1.cpp)
target_link_libraries(vector1 benchmark::benchmark)
add_executable(vector2 vector2.cpp)
target_link_libraries(vector2 benchmark::benchmark)