cmake_minimum_required(VERSION 3.12)
project(Chapter11)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(01_bad 01_bad.cpp)
add_executable(02a_trycatch_cleanup 02a_trycatch_cleanup.cpp)
add_executable(02b_trycatch_raiicleanup 02b_trycatch_raiicleanup.cpp)
add_executable(02_trycatch 02_trycatch.cpp)
add_executable(03_raii 03_raii.cpp)
add_executable(04a_scopeguard_basic_typedef 04a_scopeguard_basic_typedef.cpp)
add_executable(04_scopeguard_basic 04_scopeguard_basic.cpp)
add_executable(05a_scopeguard_basic_move_cpp14 05a_scopeguard_basic_move_cpp14.cpp)
add_executable(05_scopeguard_basic_move 05_scopeguard_basic_move.cpp)
add_executable(06_scopeguard_obj 06_scopeguard_obj.cpp)
add_executable(07a_scopeguard_lambda_cleanup 07a_scopeguard_lambda_cleanup.cpp)
add_executable(07_scopeguard_lambda 07_scopeguard_lambda.cpp)
add_executable(08_scopeguard_exception 08_scopeguard_exception.cpp)
add_executable(09_scopeguard_shielded 09_scopeguard_shielded.cpp)
add_executable(10_scopeguard_lambda_cpp17 10_scopeguard_lambda_cpp17.cpp)
add_executable(11a_scopeguard_on_exit_named 11a_scopeguard_on_exit_named.cpp)
add_executable(11_scopeguard_on_exit 11_scopeguard_on_exit.cpp)
add_executable(12a_scopeguard_on_fail 12a_scopeguard_on_fail.cpp)
add_executable(12b_scopeguard_on_fail_gcc 12b_scopeguard_on_fail_gcc.cpp)
add_executable(12_scopeguard_on_fail_cpp17 12_scopeguard_on_fail_cpp17.cpp)
add_executable(13a_scopeguard_te_benchmark 13a_scopeguard_te_benchmark.cpp)
add_executable(13_scopeguard_te 13_scopeguard_te.cpp)
