cmake_minimum_required(VERSION 3.12)
project(Chapter12)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(equal_friend_factory_crtp equal_friend_factory_crtp.cpp)
add_executable(friend_factory friend_factory.cpp)
add_executable(friend_nontemplate friend_nontemplate.cpp)
add_executable(friend_template friend_template.cpp)
add_executable(plus_friend1 plus_friend1.cpp)
add_executable(plus_friend1_template plus_friend1_template.cpp)
add_executable(plus_friend plus_friend.cpp)
add_executable(plus_friend_factory plus_friend_factory.cpp)
add_executable(plus_friend_factory_crtp plus_friend_factory_crtp.cpp)
add_executable(plus_friend_factory_ns plus_friend_factory_ns.cpp)
add_executable(plus_friend_template plus_friend_template.cpp)
add_executable(plus_member plus_member.cpp)
