cmake_minimum_required(VERSION 3.12)
project(Chapter15)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_package(benchmark)

add_executable(singleton_eager singleton_eager.cpp)
target_link_libraries(singleton_eager benchmark::benchmark)
add_executable(singleton_lazy_leaky singleton_lazy_leaky.cpp)
target_link_libraries(singleton_lazy_leaky benchmark::benchmark)
add_executable(singleton_meyers singleton_meyers.cpp)
target_link_libraries(singleton_meyers benchmark::benchmark)
add_executable(singleton_meyers_pimpl1 singleton_meyers_pimpl1.cpp)
target_link_libraries(singleton_meyers_pimpl1 benchmark::benchmark)
add_executable(singleton_meyers_pimpl singleton_meyers_pimpl.cpp)
target_link_libraries(singleton_meyers_pimpl benchmark::benchmark)
add_executable(singleton_noaccess singleton_noaccess.cpp)
target_link_libraries(singleton_noaccess benchmark::benchmark)
add_executable(singleton_static1 singleton_static1.cpp)
target_link_libraries(singleton_static1 benchmark::benchmark)
add_executable(singleton_static singleton_static.cpp)
target_link_libraries(singleton_static benchmark::benchmark)