cmake_minimum_required(VERSION 3.12)
project(Chapter16)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(01_scoped_ptr 01_scoped_ptr.cpp)
add_executable(02a_scoped_ptr_bug 02a_scoped_ptr_bug.cpp)
add_executable(02b_scoped_ptr 02b_scoped_ptr.cpp)
add_executable(02c_scoped_ptr 02c_scoped_ptr.cpp)
add_executable(02d_scoped_ptr 02d_scoped_ptr.cpp)
add_executable(02e_scoped_ptr 02e_scoped_ptr.cpp)
add_executable(02f_scoped_ptr 02f_scoped_ptr.cpp)
add_executable(02g_scoped_ptr 02g_scoped_ptr.cpp)
add_executable(02_scoped_ptr 02_scoped_ptr.cpp)
add_executable(03a_scoped_ptr 03a_scoped_ptr.cpp)
add_executable(03b_scoped_ptr 03b_scoped_ptr.cpp)
add_executable(03_scoped_ptr 03_scoped_ptr.cpp)
add_executable(04a_scoped_movable_ptr 04a_scoped_movable_ptr.cpp)
add_executable(04_scoped_movable_ptr 04_scoped_movable_ptr.cpp)
add_executable(05a_shared_ptr_test 05a_shared_ptr_test.cpp)
add_executable(05b_shared_ptr_test 05b_shared_ptr_test.cpp)
add_executable(05_shared_ptr 05_shared_ptr.cpp)
add_executable(06_shared_ptr_debug 06_shared_ptr_debug.cpp)
add_executable(07a_shared_ptr_debug 07a_shared_ptr_debug.cpp)
add_executable(07_shared_ptr_debug 07_shared_ptr_debug.cpp)
add_executable(08a_scoped_ptr_enable_if 08a_scoped_ptr_enable_if.cpp)
add_executable(08b_scoped_ptr_enable_if 08b_scoped_ptr_enable_if.cpp)
add_executable(08c_scoped_ptr_enable_if 08c_scoped_ptr_enable_if.cpp)
add_executable(08_scoped_ptr_enable_if 08_scoped_ptr_enable_if.cpp)
# add_executable(09a_shared_ptr 09a_shared_ptr.cpp)
add_executable(09_shared_ptr 09_shared_ptr.cpp)
add_executable(10_shared_ptr_rebind 10_shared_ptr_rebind.cpp)
add_executable(11_pack 11_pack.cpp)
