cmake_minimum_required(VERSION 3.12)
project(Chapter17)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(01a_decorator 01a_decorator.cpp)
add_executable(01_decorator 01_decorator.cpp)
add_executable(02a_decorator 02a_decorator.cpp)
add_executable(02_decorator 02_decorator.cpp)
add_executable(03a_decorator 03a_decorator.cpp)
add_executable(03_decorator 03_decorator.cpp)
add_executable(04a_decorator 04a_decorator.cpp)
add_executable(04b_decorator 04b_decorator.cpp)
add_executable(04c_decorator 04c_decorator.cpp)
add_executable(04d_decorator 04d_decorator.cpp)
add_executable(04_decorator 04_decorator.cpp)
add_executable(05a_locking_queue 05a_locking_queue.cpp)
add_executable(05_locking_queue 05_locking_queue.cpp)
add_executable(06a_adapter_curry 06a_adapter_curry.cpp)
add_executable(06_adapter_curry 06_adapter_curry.cpp)
add_executable(06b_adapter_lambda 06b_adapter_lambda.cpp)
add_executable(06c_adapter_bind 06c_adapter_bind.cpp)
add_executable(06c_adapter_lambda 06c_adapter_lambda.cpp)
add_executable(06d_adapter_bind 06d_adapter_bind.cpp)
add_executable(07a_template_template_adapter 07a_template_template_adapter.cpp)
add_executable(07b_template_template_adapter 07b_template_template_adapter.cpp)
add_executable(07c_template_template_adapter 07c_template_template_adapter.cpp)
add_executable(07_template_template_adapter 07_template_template_adapter.cpp)
add_executable(08a_time_adapter 08a_time_adapter.cpp)
add_executable(08_time_adapter 08_time_adapter.cpp)
add_executable(09_value_decorators 09_value_decorators.cpp)
