cmake_minimum_required(VERSION 3.12)
project(Chapter18)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(01a_visitor 01a_visitor.cpp)
add_executable(01b_visitor 01b_visitor.cpp)
add_executable(01_visitor 01_visitor.cpp)
add_executable(02a_visitor_retval 02a_visitor_retval.cpp)
add_executable(02_visitor_args 02_visitor_args.cpp)
add_executable(03a_composite_visitor 03a_composite_visitor.cpp)
add_executable(03b_serialization_visitor 03b_serialization_visitor.cpp)
add_executable(03_container_visitor 03_container_visitor.cpp)
add_executable(03c_serialization_visitor 03c_serialization_visitor.cpp)
add_executable(04a_visitor_template 04a_visitor_template.cpp)
add_executable(04b_visitor_template 04b_visitor_template.cpp)
add_executable(04c_visitor_template 04c_visitor_template.cpp)
add_executable(04_visitor_template 04_visitor_template.cpp)
add_executable(05a_acyclic_visitor 05a_acyclic_visitor.cpp)
add_executable(05_acyclic_visitor 05_acyclic_visitor.cpp)
add_executable(05b_acyclic_visitor 05b_acyclic_visitor.cpp)
add_executable(06_static_visitor 06_static_visitor.cpp)
add_executable(07a_serialize_visitor 07a_serialize_visitor.cpp)
add_executable(07_serialize_visitor 07_serialize_visitor.cpp)
